--- a/static/less/header-3.less
+++ b/static/less/header-3.less
@@ -28,6 +28,7 @@
     .navbar {
         top: 0;
         margin-top: 10px;
+        margin-bottom: 0px;
         font-family: @font-family-demo;
         &.navbar-fixed-top {
             top: 0 !important;
